fixed nav on ie

--- a/public/Styles/SiteCommon.css
+++ b/public/Styles/SiteCommon.css
@@ -80,15 +80,17 @@ body, .layout-body-content {
  */
 .navbar {
     /*margin-top: 15px;*/
+    /*background-color:#333;*/
 }
 
 .navbar > .buffer {
 
-    margin: 0px auto;
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
 
-    display: table;
-
-    background-color: #000;
+    /*background-color: #000;*/
 
     color: #b9b9b9;
 
@@ -100,20 +102,20 @@ body, .layout-body-content {
 
 .navbar-item:last-child {
     border-right: none !important;
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 0px 0px 10px 0px;
 }
 
 .navbar-item:first-child {
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 0px 0px 0px 10px;
 }
 
 .navbar-item {
-
+    background-color: #000;
     border-right: 1px solid #3a3a3a;
-
+    flex: 0 0 auto;
     color: inherit;
     text-decoration: none;
-    display:inline-block;
+    display:block;
     text-align: center;
     padding: 15px 20px;
     max-width: 30rem;
